[gd_scene load_steps=4 format=2]

[ext_resource path="res://UserInterface/Title.tscn" type="PackedScene" id=1]
[ext_resource path="res://UserInterface/But_ChangeScene.tscn" type="PackedScene" id=2]
[ext_resource path="res://screens/Character_Load.gd" type="Script" id=3]

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextEdit" type="TextEdit" parent="."]
margin_left = 189.0
margin_top = 18.0
margin_right = 989.0
margin_bottom = 461.0
readonly = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Title" parent="." instance=ExtResource( 1 )]
anchor_left = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 0.0
margin_top = 0.0
margin_right = 0.0
margin_bottom = 0.0
text = "Load Character (temp)"

[node name="But_loadCharacter" type="Button" parent="Title"]
margin_left = 22.0
margin_top = 34.0
margin_right = 155.0
margin_bottom = 54.0
text = "Load Character File"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="But_StartNewGame" parent="Title" instance=ExtResource( 2 )]
margin_left = 22.0
margin_top = 71.0
margin_right = 181.0
margin_bottom = 95.0
text = "Temp: Start New Game"
next_scene_path = "res://gamePlay/Game.tscn"

[node name="But_ChangeScene" parent="Title" instance=ExtResource( 2 )]
margin_left = 21.0
margin_top = 109.0
margin_right = 164.0
margin_bottom = 133.0
text = "Temp: Main Menu "
next_scene_path = "res://Screens/MenuScreen.tscn"

[node name="LoadCharacter_FileDialog" type="FileDialog" parent="."]
margin_left = 193.0
margin_top = 33.0
margin_right = 862.0
margin_bottom = 409.0
window_title = "Open a File"
mode = 0
access = 1
current_dir = "user://characterFiles"
current_path = "user://characterFiles/"
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="Title/But_loadCharacter" to="." method="_on_But_loadCharacter_pressed"]
[connection signal="file_selected" from="LoadCharacter_FileDialog" to="." method="_on_LoadCharacter_FileDialog_file_selected"]
